DOCS-1190: Fixes display bug in search modal

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -451,3 +451,6 @@ input[class*='searchQueryInput']:focus {
 [class*='searchResultItem'] a {
   color: var(--docsearch-hit-color);
 }
+.DocSearch-Hit-content-wrapper {
+  overflow-y: hidden;
+}
