DOCS-1193: Get rid of glyph icons/fonts/styles

--- a/src/css/external-links.scss
+++ b/src/css/external-links.scss
@@ -1,19 +1,17 @@
 .markdown {
-  a[href^="http"] {
+  a[href^='http'] {
     &::after {
       position: relative;
       top: 1px;
-      font-size: 13px;
-      padding-left: 4px;
       display: inline-block;
-      font-family: "Glyphicons Halflings";
-      font-style: normal;
-      font-weight: normal;
-      line-height: 1;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-
-      content: "\e164";
+      height: 16px;
+      width: 16px;
+      margin-left: 4px;
+      background-color: currentColor;
+      -webkit-mask-image: url('/img/icons/open-new-window.svg');
+      mask-image: url('/img/icons/open-new-window.svg');
+      mask-repeat: no-repeat;
+      content: '';
     }
   }
 }
