--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -91,7 +91,7 @@ img {
   display: flex;
   align-items: center;
   width: 184px;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .logo-wrapper::after {
