[DOCS-1219] Make links more visible

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -71,6 +71,17 @@ img {
   width: auto;
 }
 
+.markdown a:not(.card) {
+  color: #1d70b8;
+  text-decoration: underline;
+}
+
+.markdown a:not(.card):hover {
+  color: #003078;
+  text-decoration-thickness: 2px;
+  text-decoration-skip-ink: none;
+}
+
 .tabs-container {
   border-left: 3px solid var(--ifm-color-primary-light);
   padding-left: 0.75rem;
