DOCS-1220: Add code block callouts

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -475,3 +475,24 @@ input[class*='searchQueryInput']:focus {
 .DocSearch-Hit-content-wrapper {
   overflow-y: hidden;
 }
+
+/* Overrides for code block callouts */
+
+pre {
+  counter-reset: callout;
+}
+
+.code-block-callout span:last-of-type::after {
+  counter-increment: callout;
+  content: counter(callout);
+  text-align: center;
+  width: 20px;
+  border-radius: 50%;
+  background-color: var(--ifm-color-secondary-contrast-foreground);
+  color: var(--ifm-background-surface-color);
+  display: inline-block;
+  font-size: 12px;
+  line-height: 17px;
+  margin-left: 8px;
+  font-family: inherit;
+}
