[DOCS-1217] Use backgroud-image for logo

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -140,6 +140,17 @@ img {
   padding-left: 0;
 }
 
+.navbar__logo {
+  background-image: url('/img/tigera-logo-black.png');
+  width: 184px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.navbar__logo img {
+  display: none;
+}
+
 /* Overrides for the header */
 
 .dropdown-separator {
