--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -61,10 +61,6 @@
   --docsearch-muted-color: #ffffff !important;
 }
 
-preloaded-images {
-  background-image: url('/img/tigera-logo-black.png'), url('/img/tigera-logo-white.png'), url('/img/calico-cloud/alerts.png');
-}
-
 /* Overrides for site-wide elements */
 
 ol ol {
@@ -94,6 +90,8 @@ img {
 .logo-wrapper {
   display: flex;
   align-items: center;
+  width: 184px;
+  justify-content: space-between;
 }
 
 .logo-wrapper::after {
@@ -202,6 +200,11 @@ img {
 
 .navbar__items {
   font-size: 0.875rem;
+}
+
+.navbar__logo {
+  position: absolute;
+  top: -4px;
 }
 
 /* Overrides for the banner on the landing page */
