[DOCS-1217] Align logo arrow to right always

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -92,16 +92,18 @@ img {
   align-items: center;
   width: 184px;
   justify-content: space-between;
+  position: relative;
 }
 
 .logo-wrapper::after {
   transform: none !important;
-  left: -8px;
   font-size: 16px;
 }
 
 .navbar__link.logo-wrapper::after {
-  top: 1px !important;
+  position: absolute;
+  top: -7px !important;
+  right: 8px;
 }
 
 .logo-wrapper .navbar__brand {
@@ -193,7 +195,6 @@ img {
 
 .navbar__logo {
   position: absolute;
-  top: -4px;
 }
 
 /* Overrides for the banner on the landing page */
