DOCS-1229: Adds links to heading titles for HomepageFeatures

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -4,7 +4,9 @@
   padding: 2rem 0;
   width: 100%;
 }
-
+.featureTitle {
+  color: black;
+}
 .featureDescription {
   font-size: 1rem;
   font-weight: 500;
