DOCS-1352-dropdown fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -161,9 +161,15 @@ img {
   font-size: 16px;
 }
 
+
+
+.logo-wrapper .navbar__brand {
+  height: 25px;
+}
+
 .navbar__link.logo-wrapper::after {
   position: absolute;
-  top: -7px !important;
+  top: 4px !important;
   right: 8px;
 }
 
