addresses light color on selected tab

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,7 +19,7 @@
   /* --ifm-color-warning-contrast-background:#097db6; */
   /* --ifm-alert-background-color-highlight: #DCEAF3; */
   --ifm-alert-background-color:  #DCEAF3;
-  --ifm-color-primary: #DCEAF3;
+  --ifm-color-primary: #000000;
   --ifm-color-primary-dark: #273981;
   --ifm-color-primary-darker: #273981;
   --ifm-color-primary-darkest: #273981;
