--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,7 +4,7 @@
  * work well for content-centric websites.
  */
 
-@import url('fonts.css');
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 
 /* You can override the default Infima variables here and define our custom global variables. */
 :root {
